# groupby

./: .gitignore  CHANGELOG.md  README.md  groupby.json  groupby.py  groupby.yaml  pyproject.toml  test_groupby.py
locale/el/: messages.po
locale/en/: messages.po
locale/templates/: messages.pot
tests/: test_groupby.py  test_migrate_params.py  test_render.py
