[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "groupby"
version = "0.0.1"
description = "Create rows representing groups of rows"
authors = ["Adam Hooper <adam@adamhooper.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
cjwmodule = "~=3.1"
pandas = "~=0.25.0"
python = "~=3.8"

[tool.poetry.dev-dependencies]
pytest = "~=6.0"

[tool.isort]
# Black compatibility
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
skipsdist = True
envlist = py38-{pyflakes,black,isort,pytest}

[flake8]
exclude = venv/*,tox/*,specs/*,build/*
ignore = E123,E128,E266,E402,W503,E731,W601
max-line-length = 88

[testenv]
deps =
  pyflakes: pyflakes>=2.2
  black: black
  isort: isort
commands =
  pyflakes: pyflakes groupby.py tests
  black: black --check groupby.py tests
  isort: isort --check --diff groupby.py tests

[testenv:py38-pytest]
deps =
  pytest~=6.0
commands =
  pip install -q .
  pytest -v
"""
